Добавлен patch метод и поправлены get,put,post. Обновлен yaml файл с OpenApi
